@@ -1294,6 +1294,10 @@ GF_PropertyValue gf_filter_parse_prop_solve_env_var(GF_FilterSession *fs, GF_Fil
 //check if item can be added to a reservoir queue, returns GF_TRUE if not added
 Bool gf_fq_res_add(GF_FilterQueue *fq, void *item);
 
+Bool filter_source_id_match(GF_FilterPid *src_pid, const char *id, GF_Filter *dst_filter, Bool *pid_excluded, Bool *needs_clone, const char *source_ids);
+const char *gf_filter_last_id_in_chain(GF_Filter *filter, Bool ignore_first);
+
+
 #endif //_GF_FILTER_SESSION_H_
 
 
